fix(phone): gap and margins corrections

--- a/css/mq/phone.css
+++ b/css/mq/phone.css
@@ -53,6 +53,7 @@ main {
 }
 
 #search input {
+  width: 70%;
   padding: 0;
   padding-left: 15px;
 }
@@ -86,6 +87,7 @@ main {
   /* TODO: Padding (add -> fix it in order to align it with page's content) */
   flex-wrap: wrap-reverse;
   width: 100%;
+  gap: 10px;
 }
 
 #housing .most-popular {
@@ -112,6 +114,10 @@ main {
 #housing .housing-list .hotel-card .thumbnail {
   width: 100%;
   height: 125px;
+}
+
+#housing .housing-list .card-row {
+  margin-top: 0px;
 }
 
 #housing .housing-list .text-button {
@@ -152,6 +158,7 @@ footer {
   margin-top: 40px;
   display: block;
   padding-bottom: 0px;
+  max-width: 100%;
 }
 
 footer .footer-category {
